kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anytwitter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anytwitter
  template:
    metadata:
      labels:
        app: anytwitter
    spec:
      containers:
      - name: anytwitter
        image: prober76/anytwitter:latest
        ports:
        - containerPort: 80
