kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anytwitter-service
spec:
  selector:
    app: anytwitter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
